--- a/app/src/main/res/layout/fragment_operation_first.xml
+++ b/app/src/main/res/layout/fragment_operation_first.xml
@@ -29,150 +29,234 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
 
-        <Button
-            android:id="@+id/buttonOperationInfo1"
-            style="?attr/materialButtonOutlinedStyle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo1"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info1"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="계약서 정보"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_setting">
 
-        <Button
-            android:id="@+id/buttonOperationInfo2"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info2"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="관리규약"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            <ImageView
+                android:id="@+id/imageViewOperationInfo1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonOperationInfo3"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info3"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="입찰공고"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:rippleColor="@color/third"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            <TextView
+                android:id="@+id/textViewOperationInfo1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="계약서 정보"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/buttonOperationInfo4"
-            style="?attr/materialButtonOutlinedStyle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo2"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info4"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="부과명세서"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
 
-        <Button
-            android:id="@+id/buttonOperationInfo5"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info5"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="재무제표"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            <ImageView
+                android:id="@+id/imageViewOperationInfo2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonOperationInfo6"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info6"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="안전관리계획"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            <TextView
+                android:id="@+id/textViewOperationInfo2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="관리규약"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/buttonOperationInfo7"
-            style="?attr/materialButtonOutlinedStyle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo3"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_margin="10dp"
-            android:backgroundTint="#B8D7D5"
-            android:drawableLeft="@drawable/icon_operation_info7"
-            android:fontFamily="@font/notosans_semibold"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:text="수선계획"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:iconTint="@color/black"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp"
-            tools:insetBottom="0dp"
-            tools:insetTop="0dp" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
+
+            <ImageView
+                android:id="@+id/imageViewOperationInfo3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewOperationInfo3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="입찰공고"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
+
+            <ImageView
+                android:id="@+id/imageViewOperationInfo4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info4"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewOperationInfo4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="부과명세서"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
+
+            <ImageView
+                android:id="@+id/imageViewOperationInfo5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewOperationInfo5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="재무제표"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo6"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
+
+            <ImageView
+                android:id="@+id/imageViewOperationInfo6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewOperationInfo6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="안전관리계획"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutOperationInfo7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_setting">
+
+            <ImageView
+                android:id="@+id/imageViewOperationInfo7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:src="@drawable/icon_operation_info7"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textViewOperationInfo7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"
+                android:text="수선계획"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </LinearLayout>
