--- a/app/src/main/res/layout/fragment_survey_write.xml
+++ b/app/src/main/res/layout/fragment_survey_write.xml
@@ -1,58 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context="ui.vote.SurveyWriteFragment">
+    android:background="#FFFFFF"
+    tools:context="ui.vote.SurveyWriteFragment"
+    android:padding="20dp">
 
-    <TextView
-        android:id="@+id/surveyWriteTextView"
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/surveyWriteToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="설문조사"
-        android:textSize="20sp"
-        android:fontFamily="@font/notosans_semibold"
-        android:includeFontPadding="false"/>
+        android:background="@color/white"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        android:gravity="start"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/surveyWriteTextView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="설문조사는 입주민도 만들 수 있어요!"
-        android:textSize="16sp"
-        android:fontFamily="@font/notosans_semibold"
-        android:includeFontPadding="false"/>
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/surveyWriteToolbar"
+        app:layout_constraintBottom_toTopOf="@id/surveyWriteButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginVertical="20dp"
-        android:background="#000000" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/surveyWriteRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/surveyWriteButton"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="설문 조사 만들기"
-            android:fontFamily="@font/notosans_semibold"
-            android:includeFontPadding="false"
-            android:backgroundTint="@color/second"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+            android:orientation="vertical">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surveyWriteEditTextTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:hint="설문조사 주제"
+                    android:includeFontPadding="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/surveyWriteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="최소 2개 이상의 항목을 작성해주세요"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surveyWirteEditTextWrite1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:hint="첫 번째 항목 입력"
+                    android:includeFontPadding="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surveyWriteEditTextWrite2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:hint="두 번째 항목 입력"
+                    android:includeFontPadding="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surveyWirteEditTextWrite3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:hint="세 번째 항목 입력"
+                    android:includeFontPadding="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/surveyWriteTextView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="어떤 내용의 설문조사인지 알려주세요"
+                android:fontFamily="@font/notosans_semibold"
+                android:includeFontPadding="false"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/surveyWriteTextViewContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosans_semibold"
+                    android:hint="설문조사 내용"
+                    android:includeFontPadding="false" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <CalendarView
+                android:id="@+id/surveyWriteCalender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:id="@+id/surveyWriteTextViewStartDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="시작 날짜"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"/>
+
+                <TextView
+                    android:id="@+id/surveyWriteTextViewEndDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="종료 날짜"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/surveyWriteTextViewStartDate1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2019-03-01"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"/>
+
+                <TextView
+                    android:id="@+id/surveyWriteTextViewEndDate1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="2019-03-01"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/surveyWriteButton"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="설문조사 만들기"
+        android:fontFamily="@font/notosans_semibold"
+        android:includeFontPadding="false"
+        android:background="@drawable/style_pointbutton_radias"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
