--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -213,6 +213,7 @@
                 android:text="방문 주차 예약"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_person"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -228,6 +229,7 @@
                 android:text="주민 투표"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_car"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -243,6 +245,7 @@
                 android:text="소방 점검"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_fire"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -277,6 +280,7 @@
                 android:text="관리사무소 문의"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_management_office"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -292,6 +296,7 @@
                 android:text="안내 방송"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_campaign"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -307,6 +312,7 @@
                 android:text="아파트 일정"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_calendar"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -322,6 +328,7 @@
                 android:text="아파트 운영정보"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_apartment"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
@@ -345,6 +352,7 @@
                 android:text="로그아웃"
                 android:textColor="@color/black"
                 android:textSize="16sp"
+                app:cornerRadius="10dp"
                 app:icon="@drawable/icon_logout"
                 app:iconTint="@color/black"
                 app:rippleColor="@color/fourth" />
